// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`branch hold, geom, bbox & length 1`] = `
Array [
  Array [
    0,
    0,
    1,
  ],
  Array [
    1,
    1,
    0,
  ],
  Array [
    -1,
    -1,
    2,
  ],
]
`;

exports[`branch hold, geom, bbox & length 2`] = `
Array [
  -1,
  -1,
  1,
  1,
]
`;

exports[`branch hold, geom, bbox & length 3`] = `
Object {
  "precision": 6,
  "type": "Distance",
  "unit": "m",
  "value": 471749,
}
`;

exports[`branch should export as GeoJSON 1`] = `
Object {
  "bbox": Array [
    -1,
    -1,
    1,
    1,
  ],
  "features": Array [
    Object {
      "geometry": Object {
        "coordinates": Array [
          0,
          0,
          1,
        ],
        "type": "Point",
      },
      "properties": Object {
        "altitude": 1,
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          1,
          1,
          0,
        ],
        "type": "Point",
      },
      "properties": Object {
        "altitude": 0,
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          -1,
          -1,
          2,
        ],
        "type": "Point",
      },
      "properties": Object {
        "altitude": 0,
      },
      "type": "Feature",
    },
  ],
  "properties": Object {
    "a": 1,
  },
  "type": "FeatureCollection",
}
`;

exports[`branch should export as GeoJSON 2`] = `
Object {
  "bbox": Array [
    -1,
    -1,
    1,
    1,
  ],
  "geometry": Object {
    "coordinates": Array [
      Array [
        0,
        0,
        1,
      ],
      Array [
        1,
        1,
        0,
      ],
      Array [
        -1,
        -1,
        2,
      ],
    ],
    "type": "MultiLineString",
  },
  "properties": Object {
    "a": 1,
  },
  "type": "Feature",
}
`;

exports[`branch should export as GeoJSON 3`] = `
Object {
  "bbox": Array [
    -1,
    -1,
    1,
    1,
  ],
  "features": Array [
    Object {
      "geometry": Object {
        "coordinates": Array [
          Array [
            Array [
              1.000095,
              0.999905,
            ],
            Array [
              1.000095,
              1.000095,
            ],
            Array [
              0.999905,
              1.000095,
            ],
            Array [
              -0.000095,
              0.000095,
            ],
            Array [
              -0.000095,
              -0.000095,
            ],
            Array [
              0.000095,
              -0.000095,
            ],
            Array [
              1.000095,
              0.999905,
            ],
          ],
        ],
        "type": "Polygon",
      },
      "properties": Object {
        "altitude": 1,
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          Array [
            Array [
              -1.000095,
              -0.999905,
            ],
            Array [
              -1.000095,
              -1.000095,
            ],
            Array [
              -0.999905,
              -1.000095,
            ],
            Array [
              1.000095,
              0.999905,
            ],
            Array [
              1.000095,
              1.000095,
            ],
            Array [
              0.999905,
              1.000095,
            ],
            Array [
              -1.000095,
              -0.999905,
            ],
          ],
        ],
        "type": "Polygon",
      },
      "properties": Object {
        "altitude": 0,
      },
      "type": "Feature",
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`branch should export as JSON 1`] = `
Object {
  "features": Array [
    1,
    2,
  ],
  "member": "Number",
  "properties": Object {
    "a": 1,
  },
  "type": "Branch",
}
`;

exports[`branch should export as JSON 2`] = `
Object {
  "features": Array [
    Object {
      "geometry": Object {
        "coordinates": Array [
          0,
          0,
          1,
        ],
        "type": "Point",
      },
      "properties": Object {
        "altitude": 1,
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          1,
          1,
          0,
        ],
        "type": "Point",
      },
      "properties": Object {
        "altitude": 0,
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          -1,
          -1,
          2,
        ],
        "type": "Point",
      },
      "properties": Object {
        "altitude": 0,
      },
      "type": "Feature",
    },
  ],
  "member": "Position",
  "properties": Object {
    "a": 1,
  },
  "type": "Branch",
}
`;

exports[`journey hold geom, bbox & length 1`] = `
Array [
  Array [
    Array [
      0,
      -1,
      1,
    ],
    Array [
      1,
      1,
      0,
    ],
  ],
  Array [
    Array [
      -1,
      0,
      0,
    ],
    Array [
      0,
      1,
      1,
    ],
  ],
]
`;

exports[`journey hold geom, bbox & length 2`] = `
Array [
  -1,
  -1,
  1,
  1,
]
`;

exports[`journey hold geom, bbox & length 3`] = `
Object {
  "precision": 6,
  "type": "Distance",
  "unit": "m",
  "value": 405887,
}
`;

exports[`journey should export as GeoJSON 1`] = `
Object {
  "bbox": Array [
    -1,
    -1,
    1,
    1,
  ],
  "features": Array [
    Object {
      "geometry": Object {
        "coordinates": Array [
          0,
          -1,
          1,
        ],
        "type": "Point",
      },
      "properties": Object {
        "altitude": Object {
          "precision": 1,
          "reference": undefined,
          "type": "Altitude",
          "unit": "m",
          "value": 1,
        },
        "timestamp": 4000,
      },
      "type": "Location",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          1,
          1,
          0,
        ],
        "type": "Point",
      },
      "properties": Object {
        "altitude": Object {
          "precision": 0,
          "reference": undefined,
          "type": "Altitude",
          "unit": "m",
          "value": 0,
        },
        "timestamp": 6000,
      },
      "type": "Location",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          -1,
          0,
          0,
        ],
        "type": "Point",
      },
      "properties": Object {
        "altitude": Object {
          "precision": 0,
          "reference": undefined,
          "type": "Altitude",
          "unit": "m",
          "value": 0,
        },
        "timestamp": 1000,
      },
      "type": "Location",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          0,
          1,
          1,
        ],
        "type": "Point",
      },
      "properties": Object {
        "altitude": Object {
          "precision": 1,
          "reference": undefined,
          "type": "Altitude",
          "unit": "m",
          "value": 1,
        },
        "timestamp": 2000,
      },
      "type": "Location",
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`journey should export as GeoJSON 2`] = `
Object {
  "bbox": Array [
    -1,
    -1,
    1,
    1,
  ],
  "geometry": Object {
    "coordinates": Array [
      Array [
        Array [
          0,
          -1,
          1,
        ],
        Array [
          1,
          1,
          0,
        ],
      ],
      Array [
        Array [
          -1,
          0,
          0,
        ],
        Array [
          0,
          1,
          1,
        ],
      ],
    ],
    "type": "MultiLineString",
  },
  "properties": Object {
    "name": "test flight",
  },
  "type": "Feature",
}
`;

exports[`journey should export as GeoJSON 3`] = `
Object {
  "bbox": Array [
    -1,
    -1,
    1,
    1,
  ],
  "features": Array [
    Object {
      "geometry": Object {
        "coordinates": Array [
          Array [
            Array [
              1.000121,
              0.99994,
            ],
            Array [
              1.00006,
              1.000121,
            ],
            Array [
              0.999879,
              1.00006,
            ],
            Array [
              -0.000121,
              -0.99994,
            ],
            Array [
              -0.00006,
              -1.000121,
            ],
            Array [
              0.000121,
              -1.00006,
            ],
            Array [
              1.000121,
              0.99994,
            ],
          ],
        ],
        "type": "Polygon",
      },
      "properties": Object {
        "altitude": Object {
          "precision": 1,
          "reference": undefined,
          "type": "Altitude",
          "unit": "m",
          "value": 1,
        },
        "timestamp": 4000,
      },
      "type": "Feature",
    },
    Object {
      "geometry": Object {
        "coordinates": Array [
          Array [
            Array [
              0.000095,
              0.999905,
            ],
            Array [
              0.000095,
              1.000095,
            ],
            Array [
              -0.000095,
              1.000095,
            ],
            Array [
              -1.000095,
              0.000095,
            ],
            Array [
              -1.000095,
              -0.000095,
            ],
            Array [
              -0.999905,
              -0.000095,
            ],
            Array [
              0.000095,
              0.999905,
            ],
          ],
        ],
        "type": "Polygon",
      },
      "properties": Object {
        "altitude": Object {
          "precision": 0,
          "reference": undefined,
          "type": "Altitude",
          "unit": "m",
          "value": 0,
        },
        "timestamp": 1000,
      },
      "type": "Feature",
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`journey should export as JSON 1`] = `
Object {
  "branches": Array [
    Object {
      "features": Array [
        Object {
          "geometry": Object {
            "coordinates": Array [
              0,
              -1,
              1,
            ],
            "type": "Point",
          },
          "properties": Object {
            "altitude": Object {
              "precision": 1,
              "reference": undefined,
              "type": "Altitude",
              "unit": "m",
              "value": 1,
            },
            "timestamp": 4000,
          },
          "type": "Location",
        },
        Object {
          "geometry": Object {
            "coordinates": Array [
              1,
              1,
              0,
            ],
            "type": "Point",
          },
          "properties": Object {
            "altitude": Object {
              "precision": 0,
              "reference": undefined,
              "type": "Altitude",
              "unit": "m",
              "value": 0,
            },
            "timestamp": 6000,
          },
          "type": "Location",
        },
      ],
      "member": "Location",
      "properties": Object {},
      "type": "Branch",
    },
    Object {
      "features": Array [
        Object {
          "geometry": Object {
            "coordinates": Array [
              -1,
              0,
              0,
            ],
            "type": "Point",
          },
          "properties": Object {
            "altitude": Object {
              "precision": 0,
              "reference": undefined,
              "type": "Altitude",
              "unit": "m",
              "value": 0,
            },
            "timestamp": 1000,
          },
          "type": "Location",
        },
        Object {
          "geometry": Object {
            "coordinates": Array [
              0,
              1,
              1,
            ],
            "type": "Point",
          },
          "properties": Object {
            "altitude": Object {
              "precision": 1,
              "reference": undefined,
              "type": "Altitude",
              "unit": "m",
              "value": 1,
            },
            "timestamp": 2000,
          },
          "type": "Location",
        },
      ],
      "member": "Location",
      "properties": Object {},
      "type": "Branch",
    },
  ],
  "properties": Object {
    "name": "test flight",
  },
  "type": "Journey",
}
`;
